--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 			<version>4.2.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>AndroidSerial</finalName>
