--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>processing</groupId>
 			<artifactId>android-core</artifactId>
-			<version>2.0</version>
+			<version>android-mode-0246</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -80,9 +80,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.pivotallabs</groupId>
+			<groupId>org.robolectric</groupId>
 			<artifactId>robolectric</artifactId>
-			<version>1.1</version>
+			<version>3.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -151,6 +151,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8.1</version>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
 				<executions>
 					<execution>
 						<phase>package</phase>
