--- a/src/test/resources/robolectric/AndroidManifest.xml
+++ b/src/test/resources/robolectric/AndroidManifest.xml
@@ -4,9 +4,8 @@
           android:versionCode="1" 
           android:versionName="1.0">
   <uses-feature android:name="android.hardware.usb.host" />
-  <uses-sdk android:minSdkVersion="10" />
-  <application android:label=""
-               android:icon="@drawable/icon">
+  <uses-sdk android:minSdkVersion="18" />
+  <application android:label="myapp">
     <activity android:name="">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
