Correct the web url

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<name>AndroidSerial</name>
 	<organization>
 		<name>Inventit Inc.</name>
-		<url>http://dev.yourinventit.com/</url>
+		<url>http://www.yourinventit.com/</url>
 	</organization>
 	<url>https://github.com/inventit/processing-android-serial</url>
 	<scm>
