--- a/library.properties
+++ b/library.properties
@@ -42,4 +42,4 @@ paragraph = This library works on Android 3.1 or later.
 version = 3
 
 # The version as the user will see it. If blank, the version attribute will be used here
-prettyVersion = 0.1.0-alpha
+prettyVersion = 0.1.0
