--- a/library.properties
+++ b/library.properties
@@ -10,13 +10,13 @@ authorList = [Daisuke Baba](https://github.com/dbaba)
 url = https://github.com/inventit/processing-android-serial
 
 # The category of your library, must be one (or many) of the following:
-#   "3D"            "Animation"     "Compilations"      "Data"          
-#   "Fabrication"   "Geometry"      "GUI"               "Hardware"      
-#   "I/O"           "Language"      "Math"              "Simulation"    
-#   "Sound"         "Utilities"     "Typography"        "Video & Vision"  
-# 
+#   "3D"            "Animation"     "Compilations"      "Data"
+#   "Fabrication"   "Geometry"      "GUI"               "Hardware"
+#   "I/O"           "Language"      "Math"              "Simulation"
+#   "Sound"         "Utilities"     "Typography"        "Video & Vision"
+#
 # If a value other than those listed is used, your library will listed as "Other."
-category = Hardware
+category = I/O
 
 # A short sentence (or fragment) to summarize the library's function. This will be
 # shown from inside the PDE when the library is being installed. Avoid repeating
