--- a/src/main/examples/PulseSensor11574/AndroidManifest.xml
+++ b/src/main/examples/PulseSensor11574/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          package="" 
-          android:versionCode="1" 
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package=""
+          android:versionCode="1"
           android:versionName="1.0">
   <uses-feature android:name="android.hardware.usb.host" />
-  <uses-sdk android:minSdkVersion="10" />
+  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="24"/>
   <application android:label=""
                android:icon="@drawable/icon">
-    <activity android:name="">
+    <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
